feat: add #assign_with_user_id
