# config/routes.rb
@@ -38,6 +38,7 @@ Rails.application.routes.draw do
       resources :assigns, only: %i[create destroy index] do
         collection do
           get :assign_member, controller: :assigns, action: :assign_members
+          post :assign_with_user_id, controller: :assigns, action: :assign_with_user_id
         end
       end
     end
